# tm5

./: .gitignore  Makefile  pyproject.toml  setup.py  todo.md
demos/ui_demo-ga2025/: ui_util.py
demos/ui_demo-geneva2025/: ui.py  ui_demo.ipynb  ui_nb.ipynb  ui_plots.py  ui_util.py
demos/ui_demo-sept2025/: ui_plots.py  ui_util.py
demos/ui_demo-wp6.v1/: ui_plots.py  ui_util.py
docs/: index.md  workflows.md
f2py/old/: interpol_grid.F90
images/: hdf4-netcdf4-intel-ubuntu20.def  intel.def  tm5-intel-ubuntu20.def  tm5env.def
pyshell/: ui.py
pyshell/etc/: bashrc
pyshell/old/: emissions.py  model.py  optimizer.py  precon.py  ui.py  utilities.py
pyshell/pyshell/: emissions.py  gridtools.py  model.py  observations.py  optimizer.py  precon.py  rc.py  runtools.py  ui.py  utilities.py
pyshell/tmflex/: PointObs.py  Var4DFlex.py  rc.py  runtools.py
run/: coarsen_meteo.py  coarsen_meteo.yaml  convert_oh_cams.py  forward.py  forward.yaml  forward_20250610.yaml  forward_20250626.yaml  forward_20250723_glb1x1.yaml  forward_co2.yaml  forward_iLab.py  gui.py  post.py  prepare_emis.py  run_tm5.py  ui.py
runtm5/: ui.py
src/HDF4/: file_hdf_l.F90  io_save_hdf.F90  meteo.F90
src/base/: Makefile.conda-cosmos-mivo.gfortran  Makefile.conda-iLab.gfortran  adj_advect.F90  (+79 more)
tm5/: __init__.py  build.py  debug.py  emissions.py  gridtools.py  inicond.py  main.py  main2.py  meteo.py  observations.py  rc.py  rcfile.py  run.py  settings.py  setup.py  species.py  units.py
ui_demo-ga2025/: ui2.py  ui3.py  ui4.py  ui5.py  ui_plots.py  ui_util.py
ui_test-ga2025/: ui_plots.py
(+290 files in other folders)
